frontend/tests/cases/positive/interface-simple-30.gr
-- multiple distinct instances of an interface

data A = A

data B = B

interface Simple a where
  simple : a -> a

instance Simple A where
  simple x = x

instance Simple B where
  simple y = y
